--- a/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
+++ b/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
@@ -47,10 +47,14 @@
     <NativeReference Include="OoyalaSDK.framework">
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
+      <ForceLoad>True</ForceLoad>
+      <Frameworks>VideoToolbox, OoyalaTVSkinSDK, JavaScriptCore, MediaPlayer, SystemConfiguration</Frameworks>
     </NativeReference>
     <NativeReference Include="OoyalaTVSkinSDK.framework">
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
+      <Frameworks>VideoToolbox, OoyalaTVSkinSDK, JavaScriptCore, MediaPlayer, SystemConfiguration, OoyalaSDK</Frameworks>
+      <ForceLoad>True</ForceLoad>
     </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\TVOS\Xamarin.TVOS.ObjCBinding.CSharp.targets" />
