--- a/Sample.OoyalaSDK.tvOS/Sample.OoyalaSDK.tvOS.csproj
+++ b/Sample.OoyalaSDK.tvOS/Sample.OoyalaSDK.tvOS.csproj
@@ -62,6 +62,7 @@
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <MtouchVerbosity></MtouchVerbosity>
     <AssemblyName>Sample.OoyalaSDK.tvOS</AssemblyName>
+    <MtouchDebug>true</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
     <DebugSymbols>true</DebugSymbols>
