--- a/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
+++ b/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
@@ -48,9 +48,8 @@
       <Kind>Framework</Kind>
       <Frameworks>VideoToolbox, JavaScriptCore, MediaPlayer, SystemConfiguration</Frameworks>
     </NativeReference>
-    <NativeReference Include="..\..\..\Desktop\OoyalaTVSkinSDK.framework">
-      <Kind>Framework</Kind>
-      <Frameworks>VideoToolbox, OoyalaSDK, JavaScriptCore, MediaPlayer, SystemConfiguration</Frameworks>
+    <NativeReference Include="..\..\..\Desktop\OoyalaTVSkinSDK-universal.a">
+      <Kind>Static</Kind>
     </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\TVOS\Xamarin.TVOS.ObjCBinding.CSharp.targets" />
