Updated path for static lib

--- a/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
+++ b/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
@@ -48,7 +48,7 @@
       <Kind>Framework</Kind>
       <Frameworks>VideoToolbox, JavaScriptCore, MediaPlayer, SystemConfiguration</Frameworks>
     </NativeReference>
-    <NativeReference Include="..\..\..\Desktop\OoyalaTVSkinSDK-universal.a">
+    <NativeReference Include="OoyalaTVSkinSDK-universal.a">
       <Kind>Static</Kind>
     </NativeReference>
   </ItemGroup>
