--- a/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
+++ b/OoyalaSDK.tvOS/OoyalaSDK.tvOS.csproj
@@ -46,10 +46,11 @@
   <ItemGroup>
     <NativeReference Include="OoyalaSDK.framework">
       <Kind>Framework</Kind>
-      <Frameworks>VideoToolbox, JavaScriptCore, MediaPlayer, SystemConfiguration</Frameworks>
+      <Frameworks>VideoToolbox, JavaScriptCore, MediaPlayer, SystemConfiguration, QuartzCore, CoreImage, CoreVideo</Frameworks>
     </NativeReference>
     <NativeReference Include="OoyalaTVSkinSDK-universal.a">
       <Kind>Static</Kind>
+      <Frameworks>QuartzCore, CoreImage, CoreVideo</Frameworks>
     </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\TVOS\Xamarin.TVOS.ObjCBinding.CSharp.targets" />
