--- a/Sample.OoyalaSDK.tvOS/Sample.OoyalaSDK.tvOS.csproj
+++ b/Sample.OoyalaSDK.tvOS/Sample.OoyalaSDK.tvOS.csproj
@@ -131,5 +131,10 @@
       <Name>OoyalaSDK.tvOS</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ooyala-slick-type.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </BundleResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\TVOS\Xamarin.TVOS.CSharp.targets" />
 </Project>
