--- a/Sample.OoyalaSDK.tvOS/Sample.OoyalaSDK.tvOS.csproj
+++ b/Sample.OoyalaSDK.tvOS/Sample.OoyalaSDK.tvOS.csproj
@@ -47,6 +47,7 @@
     <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <MtouchVerbosity></MtouchVerbosity>
+    <MtouchExtraArgs>--bitcode=asmonly</MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>pdbonly</DebugType>
