--- a/Sample.OoyalaSDK.Droid/Properties/AndroidManifest.xml
+++ b/Sample.OoyalaSDK.Droid/Properties/AndroidManifest.xml
@@ -1,21 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="1"
-          android:versionName="1.0"
-          package="com.microsoft.Sample_OoyalaSDK_Droid">
-    <uses-sdk android:minSdkVersion="16" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:allowBackup="true"
-                 android:icon="@mipmap/icon"
-                 android:label="@string/app_name"
-                 android:theme="@style/Theme.CastVideosTheme"
-                 android:largeHeap="true">
-        <meta-data android:name="com.google.android.gms.version"
-                   android:value="@integer/google_play_services_version" />
-        <meta-data android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
-                   android:value="Sample.OoyalaSDK.Droid.CastOptionsProvider" />
-    </application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.microsoft.Sample_OoyalaSDK_Droid">
+	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@style/Theme.CastVideosTheme" android:largeHeap="true">
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+		<meta-data android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME" android:value="Sample.OoyalaSDK.Droid.CastOptionsProvider" />
+	</application>
 </manifest>
